--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   
   legend {
     font-weight: bold;
-    color: #444;
+    color: #cc0000;
   }
   
   label {
@@ -42,7 +42,7 @@ body {
     padding: 0.5rem;
     margin-top: 0.2rem;
     border-radius: 4px;
-    border: 1px solid #ccc;
+    border: 1px solid #cc0000;
   }
   
   button {
